--- a/gb/ncid277_5.md
+++ b/gb/ncid277_5.md
@@ -1,4 +1,17 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11702368.md#1" target="_blank">亲共港议员何君尧 被发现办事处人去楼空</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11702368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hk-lawmaker-150x120.png" align ="left"></a>香港亲共立法会议员何君尧在11月24日的区议会选举落败之后，被民众揶揄为“何已完”（与广东话的“何议员”同音）。最近有民众发现，他在荃湾的办事处已人去楼空。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11702109.md#1" target="_blank">美议员提案阻止世银贷款给中共 专家支持</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11702109.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-167978626-150x120.jpg" align ="left"></a>美国对冲基金大佬、海曼资本管理公司（Hayman Capital Management）创办人巴斯（Kyle Bass）在周三（12月4日）表示，他支持一项由美国国会议员提出、旨在制止世界银行贷款给中共的法案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701493.md#1" target="_blank">【思想领袖】中共内部承认正走向解体（一）</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701493.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Interview-150x120.jpg" align ="left"></a>英文《大纪元时报》资深记者杨杰凯（Jan Jekielek）在2019年11月份对美国宾夕法尼亚大学国际关系和中共历史教授、中共问题专家林蔚（亚瑟·沃尔德伦，Arthur Waldron）进行了专访。全文翻译如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700987.md#1" target="_blank">香港商台宣布取消叱咤乐坛颁奖礼 网民热议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-17_16-34-02-150x120.jpg" align ="left"></a>继港台和新城宣布取消今年的实体颁奖礼之后，一直坚持如期举行“叱咤乐坛颁奖典礼”的香港商业电台，12月4日以安全问题为由宣布取消明年1月1日举行该项盛事，引发热议。网民纷纷质疑事件与寄寓香港精神的歌曲《愿荣光归香港》被力推为“我最喜爱的歌曲”有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701182.md#1" target="_blank">作家陶杰执导新片《香港》有望为港人解忧</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701182.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/11/141104065221100311-150x120.jpg" align ="left"></a>专栏作家陶杰日前执导片长为40分钟的影片《香港》。该片包括六个相对独立而又有紧密联系的故事，不同的故事各以香港十八区的名字命名，包括铜锣湾、炮台山、天后、西环河及金钟等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700803.md#1" target="_blank">【新闻看点】接连受重击 北京最大噩梦要来了</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700803.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/19-12-023.32-150x120.jpg" align ="left"></a>最近中共接连遭受重击，国际社会几乎形成了联动，纷纷针对中共出台各项措施。而在国内，广东茂名村民经过3天勇武抗争，终于迫使当局公开让步道歉。几天来，国际加紧围猎封堵中共，国内民众勇武抗争成功，北京最大的噩梦要来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700936.md#1" target="_blank">【新闻看点】北京抹黑王立强案 专家：情报可信</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700936.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-11-2811.32-600x400-150x120.jpg" align ="left"></a>中共外交部发言人华春莹表示，澳洲炒作王立强案，只是一个“荒唐可笑的闹剧、粗制滥造的肥皂剧”。但美国情报专家认为，王立强也许不是专业的职业间谍，但他透露的情报“非常值得关注和认真分析”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701169.md#1" target="_blank">被辞职成话题 罗家聪：反映意识形态之战</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701169.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20180624-RTHK-kiri-4-1-150x120.jpg" align ="left"></a>反送中运动近半年，虽金融界一向政治冷感，但寒蝉效应已不断蔓延。有港版“末日博士”之称的交通银行（香港）前首席经济师罗家聪，因日前接受外媒采访大爆辞职内幕，一夜间成为焦点。他12月4日接受《大纪元时报》专访时坦言，自己被辞职登上外媒头条，反映出共产主义和资本主义意识形态之战。面对中资言论进一步收紧，他强调，所谓“君子爱财，取之有道”，自己不愿意屈服，惟有离开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701145.md#1" target="_blank">关系紧张之际 美中两军参谋长首次通话</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701145.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-590013154-150x120.jpg" align ="left"></a>就在美国总统川普签署香港人权法案，众议院通过新疆法案先后引发中共跳脚回应之际，美国和中国军方最高官员进行了通话，力图缓和香港人权法通过后的紧张气氛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701080.md#1" target="_blank">美专家：若消息属实 向心夫妇或自愿留台湾</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Capture-2-150x120.jpg" align ="left"></a>中共情报人员王立强投诚澳洲后，在国际社会激起了巨大反响。王立强指证的上司中创董事会主席向心、龚青夫妇，在离境台湾时，被移送台北地检署复查，被限制出境、出海。最新消息透露，向心、龚青夫妇选择自愿留在台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701063.md#1" target="_blank">供应链转移 美中型企业寻找中国以外市场</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/6e495e577ecf267edd6e32add6991dd3-150x120.jpg" align ="left"></a>不仅卡特彼勒以及孩之宝（Hasbro）等大型公司受到美中贸易战的冲击，周三（12月4日）发布的一份调查报告显示，美国中型企业已经开始寻找中国以外的客户销售产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700274.md#1" target="_blank">台湾6成3民众相信中共干预台大选</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700274.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4de44ffad1ffa91abe3b530535c11d56-150x120.jpg" align ="left"></a>台湾制宪基金会4日发布“中国在台湾选举中扮演的角色：最新2020总统与立委选情”民调结果显示，63.3%受访者相信中国（中共）企图利用各种方式来影响台湾2020年总统选举结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700880.md#1" target="_blank">向心豪宅“房客” 网路新贵总经理被约谈</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700880.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dddfc73fed4622988dc481ba6d33afbb-150x120.jpg" align ="left"></a>共谍案主角向心夫妇砸重金在信义区买下三户豪宅，其中一户豪宅租给一家网路公司“优爱德”。台湾检方近日传唤优爱德总经理张天豪，但他供称只是向心的房客，讯后将他请回。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700822.md#1" target="_blank">英国首相：考虑把华为排除在5G网络之外</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186413236-150x120.jpg" align ="left"></a>在周三（12月4日）的北约峰会上，与会各国在电信安全问题上达成一致。英国首相鲍里斯·约翰逊（Boris Johnson）在记者会上表示，如果华为有可能危及英国国家安全，或危及到英国与其??他“五眼”国家的合作，英政府将把华为排除在5G网络建设之外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700578.md#1" target="_blank">TikTok被告上美法庭 下载量惊人市值曝光</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700578.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-1073256664-150x120.jpg" align ="left"></a>上周三（11月27日），中国“抖音”国际版TikTok有超过一百名国际用户在加利福尼亚州北区地方法庭提起诉讼，TikTok及其母公司“字节跳动”等共四个相关实体面临八项指控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700587.md#1" target="_blank">北约峰会聚焦中共挑战和5G基础设施</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MS960-150x120.jpg" align ="left"></a>北大西洋公约（简称北约）成立70周年，各成员国周二（3日）和周三（4日）聚集在伦敦。据北约秘书长透露，周三的会谈各国元首聚焦的议题会包括武器控制、5G关键基础设施等。此外，还首次将中共构成的战略挑战纳入议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:53 PM							</td></tr>
@@ -16,21 +29,6 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11699168.md#1" target="_blank">北京软硬施压无效 意大利国会通过挺港决议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11699168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010520401501-150x120.jpg" align ="left"></a>意大利国会外交委员会12月3日通过一份声援香港抗议的决议案，要求调查香港警察滥用武力情况，释放示威民众，并呼吁对于禁止社运领袖黄之锋赴欧演讲一事，提出正当理由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11697470.md#1" target="_blank">向心共谍案 专家吁政府严查揪出在台间谍网</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11697470.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191127PHO0018l-600x400-150x120.jpg" align ="left"></a>中共特工王立强投诚澳洲并申请庇护引发国际关注，对于他指控的老板中共间谍向心与龚青夫妇在台被抓，专家支持中华民国政府严审向心夫妇，并揪出渗透潜藏在台湾的共谍网，尽速绳之以法维护国安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 9:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698583.md#1" target="_blank">报复香港反送中？传中共拟阻陆片竞逐金像奖</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1907140504501366@1200x1200-150x120.jpg" align ="left"></a>中共官方继今年8月祭出金马禁令之后，近日又有消息指，因对香港近半年来的反送中抗争运动十分不满，中共当局正部署打压明年4月举行的香港金像奖，试图禁止大陆电影和电影人参加颁奖礼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698275.md#1" target="_blank">栗战书标榜澳门基本法23条 隐藏对港密码？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698275.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020145571501-150x120.jpg" align ="left"></a>中共人大常委会今天（3日）在北京召开澳门《基本法》实施20周年座谈会，规格超高。中共人大委员长栗战书讲话强调中央对澳门和香港的要求一样。分析认为，港澳之间无可比性；香港动荡局势下，中共暗示或以新手段对待香港。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698418.md#1" target="_blank">孟晚舟被抓周年 民意反转 华为形象崩塌</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698418.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11111-150x120.jpg" align ="left"></a>就在华为构陷离职讨薪员工致其入狱251天，引发民怨爆棚之际。华为和中共宣传部门为扭转舆论，转发了一封华为CFO孟晚舟被捕一周年写的鸡汤信，讲述“苦难”的同时高调表达“爱国”情怀。然而时过境迁，公开信后面收获的都是251，各种揶揄和愤怒。华为煽动“爱国”构架起的所谓“民族英雄”被批已经人设崩塌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698450.md#1" target="_blank">赣州原政法委书记被指卖官及当涉黑保护伞</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698450.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ma-yufu_4-150x120.jpg" align ="left"></a>曾任赣州政法委书记7年多的中共江西省赣州市委前常委、统战部部长马玉福日前被“双开”并移送司法。马玉福被指搞两面派，卖官鬻爵，充当涉黑“保护伞”等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698473.md#1" target="_blank">为何川普在大选后再签协议 可消除中共杠杆</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1K60VI-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（12月3日）表示，他更愿意等到美国大选后再签美中协议。此言引发热议。美国商务部长罗斯（Wilbur Ross）当天解释，等到大选后达协议会削弱中方施压美方的能力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698114.md#1" target="_blank">【新闻看点】港自治受挤压 美警告将有行动</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698114.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191201092447100615-150x120.jpg" align ="left"></a>美国总统川普签署《香港人权法案》后，美中围绕香港问题的角力正在升级。中共拿出两项反制美国的措施。美国国务院今天（12月3日）做出强硬回应。批评中共指控不实，北京诬赖外国势力介入是为了“分散外界注意力”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698433.md#1" target="_blank">中共惧抗争蔓延全国 茂名“时代革命”成功</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-2-e1575404135259-1-150x120.jpg" align ="left"></a>就在香港人通过半年抗争取得区议会选举胜利之后，反共火种传到了大陆。11月28日，广东茂名化州市文楼镇村民学港人提出“五大诉求”，高喊“光复茂名 时代革命”，勇敢站出来反对政府的错误决定、并用武力反抗警察的暴力镇压。不过结局不同的是，12月1日，文楼党委书记和市公安局长公开让步道歉，而香港林郑政府依旧与民为敌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:03 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698187.md#1" target="_blank">【新闻看点】孟晚舟豪宅作画 华为251案遭轰</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1170783534-150x120.jpg" align ="left"></a>在家里坐牢的华为首席财务官孟晚舟，届满一年之际发了一封公开信，与此同时，华为离职员工李洪元被诬告逮捕，遭到羁押251天后无罪释放。李洪元要求华为道歉，却被华为拒绝。引发舆论哗然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 4:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698314.md#1" target="_blank">【热点互动】手机人脸识别登场 全国新疆化？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698314.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dcef68a196f6d1_ttl7dayfor_2abe024360423b70-150x120.jpg" align ="left"></a>从12月1日起，在中国新手机注册需面部识别，将手机用户的面部状态存入数据库。外界认为中共此举是为了进一步监控民众。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 4:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698116.md#1" target="_blank">川普：股市下滑 不会迫使我和中方达坏协议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186269317-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（12月3日）出席北约峰会，在被问道是否计划在年底之前完成与中方的贸易协议，他回答：“我没有最后期限。”
-
-他还补充说：“从某些方面来说，等到大选后再进行会更好。”美国将在2020年11月举行总统大选，川普正争取连任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 3:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11696111.md#1" target="_blank">高狄病亡 中共“吉林帮”日渐衰落</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11696111.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>中共吉林省委前书记高狄近期病亡。高曾因在“六四”后帮助江泽民对抗邓小平而获江信任，并乘机向江推荐了多名“吉林帮”成员。但习近平上台后，“吉林帮”一批成员被查，日渐衰落。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11697897.md#1" target="_blank">加前副总理提与中共交换人质 专家称很危险</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11697897.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/05082396-150x120.jpg" align ="left"></a>加拿大前自由党副总理、研科现任董事曼利（John Manley）近日表示，加拿大政府应与中共交换囚犯，才能让被中共关押的两名加拿大公民回国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698239.md#1" target="_blank">美国务院高官批中共：内政外交都倒行逆施</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698239.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1156013639-150x120.jpg" align ="left"></a>12月2日，美国务院负责东亚和太平洋事务的助理国务卿史达伟（David Stilwell）发表演说，批评中共在过去的20年里，在内政和外交领域的倒行逆施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698041.md#1" target="_blank">“自由之家”力挺港人 斥中共可耻</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698041.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-961899996-150x120.jpg" align ="left"></a>作为对中共“制裁”报复的回应，总部位于美国华盛顿的“自由之家”于周二（12月3日）发表声明指出，在过去几十年里，该组织致力维护全球各地民主与人权。为了履行这项使命，“自由之家”与争取自由的香港人民站在一起，呼吁北京遵守中英联合声明。“自由之家”依法做事，不需要得到中共的许可。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700492.md#1" target="_blank">川普北约谈5G 再强调华为存在安全隐患</a><br></h3>在周三（12月4日）的北约峰会上，北约各国达成一致，要是用安全可靠的5G设备。美国总统川普（特朗普）更是直接指出，跟中共军方有关联的华为公司存在安全隐患。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11699071.md#1" target="_blank">美众院通过维吾尔人权法 迪里夏提：带来希望</a><br></h3>美国众议院在周二 (3 日) 晚间以，407 比 1 的票数压倒性通过“维吾尔人权政策法案”。该法案被视为继《香港人权与民主法案》之后，美国国会对中共的又一次重击。中共不出意外地再次“坚决反对”，并扬言要报复。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277_6.md#1">下一页</a></h3></td></tr>
