--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656490.md#1" target="_blank">传北京儿童医院、宣武医院出现鼠疫病例</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656490.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1280px-Yersinia_pestis_fluorescent-150x120.jpg" align ="left"></a>继来自内蒙古的两例鼠疫确诊患者引发关注后，14日上午，网上疯传北京儿童医院、宣武医院发现鼠疫患者的消息。北京当局紧急“辟谣”，称未出现新发病例，民众则不满消息被封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 5:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656034.md#1" target="_blank">不只内蒙 甘肃9月曾现鼠疫死亡病例</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/08/908051910581497-150x120.jpg" align ="left"></a>两名中国内蒙古患者在北京确诊鼠疫的消息引发关注。事实上这是今年中国大陆第二次被确认的鼠疫病例，上一次是一个半月前，发生在甘肃酒泉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 1:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/13/n11654090.md#1" target="_blank">中国惊现致命鼠疫 它是什么病 如何预防</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/13/n11654090.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/plague4-1112-150x120.jpg" align ="left"></a>中国有2人经证实在北京确诊鼠疫。消息公布后，引发民众对这种遥远、恐怖的高度传染疾病可能蔓延的恐慌。被称为“黑死病”疾病是否依然致命，又如何传播？民众怎样才能避免成为感染者？鼠疫是由鼠疫杆菌引起，老鼠等啮齿动物携带病菌，并通过跳蚤传播。当人被携带病菌的跳蚤叮咬，就会感染鼠疫。最常见的鼠疫是腺鼠疫，肺鼠疫传染最迅猛......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/13/n11651966.md#1" target="_blank">江苏七月猪瘟疫情严重 官方至今未通报</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/13/n11651966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1145130224-1-150x120.jpg" align ="left"></a>中国官方2019年4月宣布基本控制了境内的非洲猪瘟疫情，并取消了大陆25个省的疫区。不过有报道说，今年夏天之后，中国的猪瘟疫情第二波来袭，但官方却不再进行通报。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 11:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694762.md#1" target="_blank">河南邓州拆除老电视塔 砸死1人致2伤</a><br></h3>12月2日上午11时18分左右，河南南阳邓州市老广播电视塔在拆除作业过程中，几十米长的起重机臂突然断裂，导致1死2伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 4:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/27/n11683629.md#1" target="_blank">云南一高速路在建隧道口坍塌 4死8被困</a><br></h3>11月26日晚上，云南临沧市凤庆县云凤高速公路第二合同段安石隧道出口坍塌。截至27日上午9时，救出14人，其中4人死亡10人受伤，还有8人仍被困。
 
 据悉，坍塌事故发生在当晚6时许。官方公布的事故原因是，云凤高速公路第二合同段安石隧道两度出现大量泥砂涌入情况，导致出口坍塌。
