--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -18,7 +18,9 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706878.md#1" target="_blank">胡少江：北京在香港遭遇滑铁卢之后</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706878.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/3019-11-2210.50-150x120.jpg" align ="left"></a>中央和香港特区两级政府在香港区议会的选举中输得很难看！从表面上看在选举中输掉的仅仅是建制派在区议会的多数席位，但是这次选举本质上是一次香港的草根民主派与北京操纵的建制派的对垒，他们之间的输赢绝对不仅仅是候选人个人的问题，而是他们所代表的政治主张的胜败。这次选举实际是一次全民公投，即是对中央政府对香港政策的一次公投，是对.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706988.md#1" target="_blank">陈思敏：台湾11家银行踩雷中国国储能源的背后</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/02/150120083250100615-150x120.jpg" align ="left"></a>跨年之际，中国各类债务爆雷不断。12月6日消息证实，中国国储能源子公司上海国储能源在香港发行的4亿美元离岸债违约，而参贷行多达23家银行遍及亚洲金融机构。其中最大苦主要算台湾金融业者，目前11家银行踩雷初估曝险部位合计约新台币51亿元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 9:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707147.md#1" target="_blank">程晓容：华为251折射中共司法冤案黑幕</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707147.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dd8865fa144798_ttl7dayQN6_d00e5415efdd629e-150x120.jpg" align ="left"></a>华为“251”是一颗炸弹，把许多人从“中国梦”中惊醒。一个表面上代表民族实力的品牌企业，它的“狼性”折射出其主人的非人化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:36 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706681.md#1" target="_blank">隋志：从“隐性谋杀”看中共凶残</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11706681.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/flg-150x120.jpg" align ="left"></a>一九九九年七月二十日，中共与江氏集团发动全面镇压法轮功，采行“肉体上消灭、经济上搞垮、名誉上搞臭”的灭绝政策，成立专责迫害法轮功的黑机关“六一零办公室”，指挥公、检、法、司各层级的官员与警察，无所不用其极，迄今至少有四千三百多名修炼者被迫害致死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:44 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11709675.md#1" target="_blank">【投书】一位大陆律师与司法局律协的对话</a><br></h3>《刑事诉讼法》第35条：律师的职责辩护人的责任是根据事实和法律，提出证明犯罪嫌疑人、被告人无罪、罪轻或者减轻、免除其刑事责任的材料和意见，维护犯罪嫌疑人、被告人的合法权益。 
+《律师法》第37条规定“律师在执业活动中的人身权利不受侵犯”“律师在法庭上发表的代理、辩护意见不受法律追究。
+这两条法律规定在实际应用中存在.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 4:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710059.md#1" target="_blank">理悟：中共归宿</a><br></h3>亥猪闹猪瘟，党国头发昏。
 子鼠未值年，鼠疫先进门。
 港选涂地败，特工反惊魂。
