--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,15 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712075.md#1" target="_blank">美中国专家出书 揭秘中共招募间谍手段（中）</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712075.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/edited221-1-600x400-2-150x120.jpg" align ="left"></a>最近中共特工王立强投诚澳洲，引发外界对中共情报系统在海外广泛活动的关注。美国国会及行政当局中国委员会（CECC）办公室副主任彼得?马蒂斯（Peter Mattis, 中文名孟沛德）和马特?巴西（Matt Brazil）近日出书，揭露中共情报工作的历史、现状及手段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714683.md#1" target="_blank">香港客户遭政审 大陆沿海小商户经济受损</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714683.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_Hkg4639783-150x120.jpg" align ="left"></a>自6月以来，香港反送中运动持续延烧，北京采取各种方式阻止真相传入大陆。近日传出，大陆沿海多家小商户遭到警方严查，被询问香港客户的政治立场，如果支持抗争者就会被控“港独”遭到封杀，这导致许多小商户的经济损失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714651.md#1" target="_blank">国际人权日 多位大陆维权人士被控制不能外出</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13934610-150x120.jpg" align ="left"></a>12月10日国际人权日，中国多名维权人士遭到警方控制，不能外出活动。
-“中国的人权惨状一言难尽！”
-计划前往长沙旁听一个司法案件庭审的湖南维权人士陈思明，从10日凌晨开始就被警察控制在株州酒店里。他感慨道，“中国的人权惨状一言难尽！”
-
-陈思明向大记元记者表示，“天赋人权。造物主创造人时就平等赋予了每个人不可剥夺的权利。很多中国人不知道自己有人权。要.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708713.md#1" target="_blank">揭内蒙古莫旗看守所恶行 酷刑迫害法轮功</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-9-26-featurephotos-64_fLC3ND3-150x120.jpg" align ="left"></a>从1999年7月20日，中共和江泽民集团相互利用迫害法轮功以来，莫力达瓦旗（简称莫旗）看守所上至所长，下至狱警，积极参与迫害法轮功学员，使用的酷刑手段极其残忍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713990.md#1" target="_blank">【思想领袖】专访邵岚：再揭港警性暴力</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713990.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/3019-06-1810.56-150x120.jpg" align ="left"></a>邵岚再次揭露了港警的性暴力及无人道行为。而北京当局多次力挺港警，使香港局势恶化。她认为，中共非常害怕这些保护人权及自由民主的思想传到中国大陆，从而压制各种民主运动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714625.md#1" target="_blank">【思想领袖】中共内部承认正走向解体（四）</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Interview-150x120.jpg" align ="left"></a>英文《大纪元时报》资深记者杨杰凯（Jan Jekielek）近日在“美国思想领袖”节目中，对美国的中国问题专家、宾夕法尼亚大学国际关系和中国历史教授林蔚（亚瑟?沃尔德伦，Arthur Waldron）进行了专访。全文翻译如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714584.md#1" target="_blank">中国民企生存陷困境 “国资系”趁机收编</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003181822012054-150x120.jpg" align ="left"></a>中国民营企业资金紧张的情况加剧，债务违约数量激增，今年以来相继有数十家上市民企转让股权、变更实际控制人，“国资系”也因此继续大规模“公私合营”，但民企实际业绩的改善依然令人堪忧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 9:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714227.md#1" target="_blank">被抹黑和造谣拿美国绿卡 黄之锋嘲讽五毛伪造</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714227.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909131000532384-150x120.jpg" align ="left"></a>香港众志秘书长黄之锋自2014年参与“占中”运动以来，一直成为中共的眼中钉。今年6月香港爆发“反送中”运动后，他被中共党媒新华社戴上“港独组织头目”的大帽，并常常遭到五毛攻击和抹黑。10日晚，黄之锋在facebook(fb)转发一张被伪造的美国绿卡，并嘲讽道：“五毛和小粉红们要注意喔！”
 
 10日晚，黄之锋在fb转发一位网友上传的贴有他本人照片的美国工卡.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:44 AM							</td></tr>
@@ -31,9 +20,16 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713984.md#1" target="_blank">盈利难 中国支线航空飞机占比降至5%</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713984.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/travel-1265462_1920-150x120.jpg" align ="left"></a>中国支线航空市场盈利难，过去十八年支线飞机占整个民航飞机总量的份额从16%掉至5%左右，尤其是北上深三大枢纽机场，支线航班占比甚至不到1%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713042.md#1" target="_blank">国际人权日 律师家属要求中共停止迫害</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713042.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/page-1-150x120.jpg" align ="left"></a>12月10日，是国际人权日，也是备受诟病的“世界律师大会”闭幕日。中国著名人权律师高智晟妻子耿和，709案李和平律师妻子王峭岭女士要求当局停止对律师群体的打压，保障他们的合法权益。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713860.md#1" target="_blank">众院民主党提2项弹劾指控 川普回应：荒谬</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713860.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1193118589-150x120.jpg" align ="left"></a>美国众议院民主党人周二（12月10日）早上宣布针对总统川普（特朗普）的两项弹劾条款，分别是滥用职权和妨碍国会听证。川普回应说，民主党知道事实并非如此，却拒绝承认！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714742.md#1" target="_blank">唐山地震后北京昌平又地震 网民：今年反常</a><br></h3>中国地震台网正式测定，昨晚深夜，即12月10日22时28分，北京昌平区（北纬40.30度，东经116.37度）发生2.0级地震，震源深度18千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713727.md#1" target="_blank">参加人权日活动 美驻华大使馆前数十人被抓</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713727.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13942804-150x120.jpg" align ="left"></a>每年12月10日是人权日，美国驻华大使馆于昨晚（9日）举行了一场《世界人权宣言》签署七十一周年讨论会。有二十多名中国公民前往参加，他们在进场前被布置在门外的北京警察给拦截，强制传唤至朝阳区麦子店派出所。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713745.md#1" target="_blank">藏身家具从墨西哥偷渡美国 11中国人被拘</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713745.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1134848462-150x120.jpg" align ="left"></a>来自官方的消息称，美国海关与边境保护局的官员于上周末挫败一起涉嫌偷渡案。他们在对一辆从圣伊西德罗入境口岸过境的搬家卡车进行检查时，发现11名中国人藏身于车上的家具里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank">美国安顾问：使用华为 即西方信息安全末日</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1177748633-150x120.jpg" align ="left"></a>美国川普（特朗普）的国家安全顾问奥布赖恩（Robert O’Brien）警告说，如果西方世界让华为参与建立5G网络，那就是民主世界的信息安全“世界末日”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713371.md#1" target="_blank">欧盟外长会议决定：引入全球人权问责系统</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713371.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-479649782-150x120.jpg" align ="left"></a>在世界人权日前夕，欧盟外交部长会议通过新决定，将筹备一套新机制，用于惩罚严重侵犯人权者。这套机制被外界称为欧盟版的马格尼茨基人权问责法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 10:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711400.md#1" target="_blank">国际人权日 看中共迫害法轮功至今仍惨烈</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-5-150x120.jpg" align ="left"></a>12月10日，“世界人权日”前夕，国际社会强烈谴责中国的人权状况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 10:31 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank">【翻墙必看】中共残杀“变节”间谍及家人</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/08/408171957939-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713494.md#1" target="_blank">中方加速买大豆 川普说贸易谈判进展好</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周一在白宫表示，美中的贸易谈判进展良好。中方当天也表明了达成协议的愿望，并与此同时加大了购买美国大豆的力度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713536.md#1" target="_blank">淄博公安局张南分局前610主任罗忠被举报</a><br></h3>山东淄博市公安局张南分局前“610”主任罗忠直接参与迫害当地至少几十名法轮功学员，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714416.md#1" target="_blank">惠誉：中国前11月民企债违约率创新高</a><br></h3>国际评级机构惠誉表示，中国2019年前11个月的民企债券违约率达4.9%，创下新高，且由于经济成长疲软，预计明年民企债务违约率也将维持高点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713953.md#1" target="_blank">关押两名加国人一年后 中共称其被审查和起诉</a><br></h3>中共当局最近明里暗里威胁西方国家，很快会以危及中共国家安全罪名，对被其关押的两名加拿大公民——加拿大前外交官康明凯（Michael Kovrig） 和加拿大商人斯帕沃尔（Michael Spavor）进行审判。外界一致认为，中共这么做，是向加拿大施压释放华为高管孟晚舟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713224.md#1" target="_blank">视觉中国再遭中共网信办约谈 被迫暂停服务</a><br></h3>12月10日，大陆图片网站视觉中国（域名 vcg.com）、IC photo（域名 dfic.cn）均被中共要求暂停服务，进行整改，理由是与大陆外的企业进行互联网新闻信息服务业务的合作等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
